--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Desarrollado con MEAN",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,11 @@
   "homepage": "https://github.com/FabianArancibiaM/GestionPersona#readme",
   "dependencies": {
     "espress": "0.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mongoose": "^5.5.4",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.11"
   }
 }
