--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/FabianArancibiaM/GestionPersona#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "espress": "0.0.0",
     "express": "^4.16.4",
     "mongoose": "^5.5.4",
