--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "nodemon": "^1.18.11",
+    "tar": "^4.4.2"
   }
 }
